[metadata]
name = taw
version = 
author = TA WAssenaar
author_email = tsjerkw@gmail.com
description = 
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/tsjerk/taw
project_urls =
    Bug Tracker = https://github.com/tsjerk/
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent

[options]
package_dir = src
packages = find:
python_requires = >=3.6
install_requires =
	numpy
	MDAnalysis

[options.packages.find]
where = src

